# SFNN

./: .gitignore  CMakeLists.txt  main.cpp  mnt.cpp  mnt.hpp  nne.hpp
api/: CMakeLists.txt
cmd/: CMakeLists.txt
docs/: CONTRIBUTING.md  README.md
engine/: CMakeLists.txt  configs.hpp
engine/math/: backend.hpp  tensor.cpp  tensor.hpp  tensor.inl
engine/math/backend/: backend.hpp  op.hpp
engine/math/backends/: default.hpp  default.inl
engine/memory/: CMakeLists.txt  base.hpp  block.cpp  block.hpp  block_heap.cpp  block_heap.hpp  mem_test.cpp  memory.cpp  memory.hpp  memory.inl  model.hpp  simple.cpp  simple.hpp  simple_heap.cpp  simple_heap.hpp
engine/memory/allocator/: blueprint.hpp  mallocator.cpp  mallocator.hpp
engine/memory/block/: block.cpp  block.hpp  block.inl  block_heap.cpp  block_heap.hpp  block_heap.inl
engine/memory/linear/: linear.cpp  linear.hpp  linear.inl  linear_heap.cpp  linear_heap.hpp  linear_heap.inl
gui/: CMakeLists.txt
utils/: CMakeLists.txt  configs.hpp  general.cpp  general.hpp  logger.cpp  logger.hpp  memon.hpp  memonitor.hpp  mntexcept.cpp  mntexcept.hpp  nnexpect.cpp  nnexpect.hpp  platform.hpp  timer.cpp  timer.hpp  utils_test.cpp
